enhance-wasm:  Optimize code packaging.

--- a/support/enhance-wasm/test-app/index.html
+++ b/support/enhance-wasm/test-app/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Hello wasm-pack!</title>
-  </head>
-  <body>
-    <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
-    <script src="./bootstrap.js"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>BIOS Enhance Wasm</title>
+</head>
+
+<body>
+  <button id="mockLogin">Mock Login</button>
+  <button id="mockRequest">Mock Request</button>
+  <script src="./bootstrap.js"></script>
+</body>
+
 </html>
